<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorpustoSIP">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_corpusreqd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/corpus_required"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext_finalcorpus"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="bottom|end"
                android:inputType="number"
                android:maxLength="16"
                style="@style/EditTextStyleInput"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_corpusreqd" />

            <TextView
                android:id="@+id/textview_period"
                android:layout_width="128dp"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center_vertical|start"
                android:layout_marginStart="36dp"
                android:layout_marginTop="4dp"
                android:text="@string/period"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_finalcorpus"/>

            <EditText
                android:id="@+id/edittext_period"
                android:layout_width="64dp"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="bottom|end"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="4dp"
                android:inputType="number"
                android:maxLength="2"
                style="@style/EditTextStyleInput"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_finalcorpus" />

            <TextView
                android:id="@+id/textview_roi"
                android:layout_width="128dp"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center_vertical|start"
                android:layout_marginStart="36dp"
                android:layout_marginTop="4dp"
                android:text="@string/average_roi"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_period" />


            <EditText
                android:id="@+id/edittext_roi"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="bottom|end"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="4dp"
                android:inputType="numberDecimal"
                android:maxLength="5"
                style="@style/EditTextStyleInput"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_period" />

            <TextView
                android:id="@+id/textview_sipannualincrease"
                android:layout_width="128dp"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center_vertical|start"
                android:layout_marginStart="36dp"
                android:layout_marginTop="4dp"
                android:text="@string/sip_increase_per_annum"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_roi" />

            <EditText
                android:id="@+id/edittext_sipannualincrease"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="bottom|end"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="4dp"
                android:inputType="numberDecimal"
                android:maxLength="5"
                style="@style/EditTextStyleInput"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_roi" />


            <Button
                android:id="@+id/button_calculate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/calculate1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_sipannualincrease" />

            <TextView
                android:id="@+id/textview_startingsip"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="17dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center"
                android:text="@string/starting_sip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_calculate" />


            <EditText
                android:id="@+id/edittext_startingsip"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center_horizontal"
                android:enabled="false"
                style="@style/EditTextStyleOutput"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_startingsip" />

            <TextView
                android:id="@+id/textview_invested"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center"
                android:text="@string/total_invested"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_startingsip" />


            <EditText
                android:id="@+id/edittext_invested"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center_horizontal"
                android:enabled="false"
                style="@style/EditTextStyleOutput"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_invested" />

            <TextView
                android:id="@+id/textview_interest"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center"
                android:text="@string/interest_earned"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_invested" />


            <EditText
                android:id="@+id/edittext_interest"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_size_16"
                android:gravity="center_horizontal"
                android:enabled="false"
                style="@style/EditTextStyleOutput"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_interest" />

            <Button
                android:id="@+id/button_balancestatement"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="17dp"
                android:text="@string/sip"
                android:textSize="@dimen/font_size_12"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edittext_interest" />

            <Button
                android:id="@+id/button_balancestatementplus"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="17dp"
                android:text="@string/balance_sheet"
                android:textSize="@dimen/font_size_12"
                app:layout_constraintTop_toBottomOf="@id/edittext_interest"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


